--- a/tika/tika-translate/pom.xml
+++ b/tika/tika-translate/pom.xml
@@ -167,7 +167,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>${maven.site.version}</version>
+        <version>3.8.2</version>
       </plugin>
     </plugins>
 
