--- a/tika/tika-main/pom.xml
+++ b/tika/tika-main/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>com.github.dingjingmaster.tika.main</groupId>
   <artifactId>tika-main</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>tika-main</name>
   <url>http://maven.apache.org</url>
   <dependencies>
