--- a/tika/tika-main/pom.xml
+++ b/tika/tika-main/pom.xml
@@ -42,6 +42,11 @@
       <artifactId>tika-core</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parser-pkg-module</artifactId>
+      <version>3.1.0</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
     <dependency>
       <groupId>org.apache.commons</groupId>
