--- a/tika/tika-main/pom.xml
+++ b/tika/tika-main/pom.xml
@@ -47,12 +47,6 @@
       <artifactId>tika-parser-pkg-module</artifactId>
       <version>3.1.0</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-compress</artifactId>
-      <version>1.27.1</version>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
@@ -143,6 +137,17 @@
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.5.0</version>
         <configuration><skip>true</skip></configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.6.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals><goal>shade</goal></goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
